save init change

--- a/文档.md
+++ b/文档.md
@@ -6,6 +6,7 @@
 - 能直接对接现有api，并生成文档
 - ts格式完成
 - 不返回mock数据，所有示例数据从数据库中返回
+- 测试接口功能
 
 ## 前端部分
 - 默认根据修改时间进行展示
@@ -18,3 +19,32 @@
 
 
 
+### 模块分解
+#### 登陆
+- 暂定不需要注册，用户名加密码登陆，没有则创建后登陆，通过前端实现
+
+#### api字段设计
+```
+{
+  "url":"/login",
+  "method":"get", //小写
+  "headers":{
+    "access-token":"ggas5u8-gash",
+    "?id":"115agju"
+  },
+  "request":{
+    "?md5":"hhds567-0257", //参考ts设计，默认必须，?表示非必须参数
+    "time":[0,1456235]
+  },
+  "response":{
+    "status":1,
+    "message":"错误信息",
+    "payload":{
+      "data":[]
+    }
+  }
+}
+```
+设计思路：
+- 对于headers与request参数，默认必须，非必须加"?"字符区别 
+- 测试时对于非必须参数可以没有，但是不能有基本类型错误，如数组格式不正确、不为obejct等其他错误 
