--- a/文档.md
+++ b/文档.md
@@ -1,50 +1,20 @@
 
 
-# 业务需求整理
-## server部分
-- 做一个简单的mock服务  
-- 能直接对接现有api，并生成文档
-- ts格式完成
-- 不返回mock数据，所有示例数据从数据库中返回
-- 测试接口功能
+## 文档
 
-## 前端部分
-- 默认根据修改时间进行展示
-- 页面上展示最近修改时间(后期可考虑增加修改人)
-- 页面上的数据就是数据库中数据(可以修改)
-
-## 后期需求
-- 示例数据格式转类swagger格式，支持swagger导入、导出功能
-- 用户系统鉴权
+### 目标
+- 一个简单的mock-server
+- 提供测试接口，可以测试接口与文档之间字段问题
 
 
+### 具体需求
+- 有用户，管理员与普通用户，注册即为普通用户，管理员可以删除用户或则重置用户密码
+- 文档模式为向数据库存入预设数据
+- 存在mock模块，如果没有值，则返回预设数据
+- 可以单独测试某个接口，也可以测试特定接口
+- 支持从req，res中批量导入文档，后续可以编辑
+- 不同项目的api无关联性
 
-### 模块分解
-#### 登陆
-- 暂定不需要注册，用户名加密码登陆，没有则创建后登陆，通过前端实现
 
-#### api字段设计
-```
-{
-  "url":"/login",
-  "method":"get", //小写
-  "headers":{
-    "access-token":"ggas5u8-gash",
-    "?id":"115agju"
-  },
-  "request":{
-    "?md5":"hhds567-0257", //参考ts设计，默认必须，?表示非必须参数
-    "time":[0,1456235]
-  },
-  "response":{
-    "status":1,
-    "message":"错误信息",
-    "payload":{
-      "data":[]
-    }
-  }
-}
-```
-设计思路：
-- 对于headers与request参数，默认必须，非必须加"?"字符区别 
-- 测试时对于非必须参数可以没有，但是不能有基本类型错误，如数组格式不正确、不为obejct等其他错误 
+### 后续需求
+- 版本设计问题
