--- a/文档.md
+++ b/文档.md
@@ -24,3 +24,14 @@
 
 ### 用户与登陆问题
 - 为了统一性，在任意项目的login 接口下，登陆名为admin ,密码为123456，从而能通过接口进行token验证
+
+
+### 使用方法
+- req必须参数与非必须参数问题  
+默认情况下api的req参数列举出来的全部为必须参数，mock时会去校验其是否存在，但是特殊情况下会存在需要列举非必须参数，此处参考typescript设计，在其后加'?'表示非必须，如
+```
+req{
+  "name":"1235",  //必须参数
+  "name2?":"145566" //非必须参数
+}
+```
